Alignment Fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1640,6 +1640,7 @@ blockquote {
 }
 
 .copyright {
+  text-align: center;
   margin-bottom: 0px;
   font-style: italic;
 }
@@ -3585,7 +3586,7 @@ html.w-mod-js *[data-ix="home-tag-initial"] {
     margin-left: 40px;
   }
   .copyright {
-    text-align: left;
+    text-align: center;
   }
   .left-padding.more-left {
     padding-right: 0px;
